--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -69,16 +69,18 @@ jobs:
     name: Analyzer
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis          
-      - name: dotnet-sonarcloud-analysis
-        uses: spoland/dotnet-sonarcloud-analysis@v1.0
-        with:
-          # Specifies the key of the analyzed project in SonarCloud
-          project-key: luigi2407_test
-          # Specifies the SonarCloud organization
-          sonar-organization: luigi2407
-          # Specifies the access token to authenticate with to SonarCloud
-          sonar-host-url: https://sonarcloud.io
-
+     - name: Sonarscanner for dotnet
+       uses: Secbyte/dotnet-sonarscanner@v2.3
+       with:
+         buildCommand: dotnet build . --configuration Release
+         testCommand: dotnet test . --verbosity normal
+         projectKey: luigi2407_test
+         projectName: test
+         sonarOrganisation: luigi2407
+         beginArguments: >
+             /d:sonar.verbose="true"
+             /d:sonar.cs.opencover.reportsPaths='"/path/to/coverage.xml","/path/to/coverage.2.xml"'
+             /d:sonar.coverage.exclusions='"**/*.cs","**/*.md"'
+       env:
+         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
